TRY to render better contrast --> Fix style

--- a/src/Components/Contact/Contact.module.css
+++ b/src/Components/Contact/Contact.module.css
@@ -11,7 +11,7 @@
 }
 
 .Contact form {
-  background-color: #f2f2f2;
+  background-color: antiquewhite;
   width: 50%;
   border: 1px solid #707070;
   padding: 50px;
@@ -30,6 +30,7 @@
   padding: 0;
   font-size: 20px;
   font-style: normal;
+  font-weight: bold;
 }
 
 .Contact form input {
