--- a/src/Components/Dashboard/LeftColumnDashboard/ThematicsAndTags/ThematicsAndTags.module.css
+++ b/src/Components/Dashboard/LeftColumnDashboard/ThematicsAndTags/ThematicsAndTags.module.css
@@ -13,21 +13,22 @@
   font-size: 20px;
   font-weight: bold;
   text-align: center;
-  padding: 10px;
   text-transform: uppercase;
 }
 
 .ThematicsAndTags ul {
   margin: 0;
   padding: 0;
-  border-bottom: 1px solid #707070;
-  border-right: 1px solid #707070;
-  border-left: 1px solid #707070;
+  border: 1px solid silver;
+  min-height: 100px;
+  max-height: 70px;
+  overflow: scroll;
 }
 
 .ThematicsAndTags ul li {
   color: #a1a1a1;
   cursor: pointer;
+  padding: 5px;
 }
 
 .ThematicsAndTags p {
