--- a/src/Components/Dashboard/QuizzCreator/QuizzCreator.module.css
+++ b/src/Components/Dashboard/QuizzCreator/QuizzCreator.module.css
@@ -12,8 +12,11 @@
   font-size: 50px;
   font-weight: bold;
   color: white;
+  border: 1px solid silver;
+  border-bottom: none;
   background: rgb(56, 103, 237);
   background: linear-gradient(81deg, rgba(56, 103, 237, 0.8) 30%, rgba(150, 3, 254, 0.6) 60%);
+  border-radius: 10px 10px 0 0;
 }
 
 .QuizzCreator h2 {
@@ -30,11 +33,8 @@
   width: 100%;
   max-width: 1110px;
   justify-content: space-between;
-  background-color: #e6dcdc66;
-  border-bottom: 1px solid #707070;
-  border-right: 1px solid #707070;
-  border-left: 1px solid #707070;
-  background-color: #e7e7e7;
+  border: 1px solid silver;
+  background-color: antiquewhite;
   border-radius: 0 0 10px 10px;
 }
 
